[project]
name = "rlhf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-aiplatform>=1.126.1",
    "google-cloud-pipeline-components>=2.21.0",
    "ipykernel>=7.1.0",
    "kfp>=2.14.6",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
]
